k8s/backend-despachos-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-despachos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-despachos
  template:
    metadata:
      labels:
        app: backend-despachos
    spec:
      containers:
      - name: backend-despachos
        image: 956050146632.dkr.ecr.us-east-1.amazonaws.com/tienda-despachos:latest
        ports:
        - containerPort: 8081
