k8s/backend-ventas-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ventas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-ventas
  template:
    metadata:
      labels:
        app: backend-ventas
    spec:
      containers:
      - name: backend-ventas
        image: 956050146632.dkr.ecr.us-east-1.amazonaws.com/tienda-ventas:latest
        ports:
        - containerPort: 8082
