k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-despacho
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-despacho
  template:
    metadata:
      labels:
        app: frontend-despacho
    spec:
      containers:
      - name: frontend-despacho
        # Recuerda cambiar esto por la URL real de tu repositorio ECR en AWS
        image: 956050146632.dkr.ecr.us-east-1.amazonaws.com/tienda-frontend:latest
        ports:
        - containerPort: 80 # El puerto de Nginx
