k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0  # 👈 Al usar la oficial de Docker Hub, evitamos el ErrImagePull de ECR
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-init-volume
          mountPath: /docker-entrypoint-initdb.d # 👈 Carpeta interna de MySQL para auto-ejecutar scripts
      volumes:
      - name: mysql-init-volume
        configMap:
          name: mysql-init-script # 👈 Llamamos al ConfigMap del Paso 1
