k8s/ingress-backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  ingressClassName: nginx 
  rules:
    - http:
        paths:
          - path: /api/v1/ventas
            pathType: Prefix
            backend:
              service:
                name: backend-ventas-svc
                port:
                  number: 80
          - path: /api/v1/despachos
            pathType: Prefix
            backend:
              service:
                name: backend-despachos-svc
                port:
                  number: 80
